tests/integration_tests/snapshots/integration__integration_tests__git_error_display__worktree_removal_failed_directory_not_empty.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mFailed to remove worktree for [1mfeature-x[22m @ [1m/tmp/repo.feature-x[22m[39m
[107m [0m error: failed to delete '/tmp/repo.feature-x': Directory not empty
[2m↳[22m [2mRemaining in directory: [4m.vite/, node_modules/, target/[24m[22m
[2m↳[22m [2mA background process may be writing files; try [4mwt remove[24m (without --foreground)[22m
