tests/integration_tests/snapshots/integration__integration_tests__git_error_display__worktree_removal_failed_with_remaining_entries.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mFailed to remove worktree for [1mfeature-x[22m @ [1m/tmp/repo.feature-x[22m[39m
[107m [0m error: failed to remove '/tmp/repo.feature-x/target': Permission denied
[2m↳[22m [2mRemaining in directory: [4mtarget/[24m[22m
